<resources>
    <string name="app_name">Surrogate Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_ip_address_hint">Enter the IP Address</string>
    <string name="enter_port_number_hint">Enter the port number</string>
    <string name="enter_surrogate_details_label">Enter Surrogate Details</string>
    <string name="test_connection_button_label">TEST CONNECTION</string>
    <string name="performance_and_energy_title">Performance and Energy Consumption</string>
    <string name="response_from_surrogate_label">Response from the Surrogate</string>
    <string name="surrogate_index_label">Surrogate Index</string>
    <string name="wifi_strength_label">Wifi Strength</string>
    <string name="surrogate_power_status_label">Surrogate Power</string>
    <string name="surrogate_load_label">Surrogate Load</string>
    <string name="available_ram_label">Available RAM (JVM)</string>
</resources>
