<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".Dashboard"
    android:background="#214193">

    <com.github.lzyzsd.circleprogress.ArcProgress
        android:id="@+id/arc_progress_CPU"
        android:background="#214193"
        android:layout_marginLeft="10dp"
        android:layout_width="170dp"
        android:layout_height="170dp"
        custom:arc_suffix_text_padding = "5dp"
        custom:arc_suffix_text_size = "25dp"
        custom:arc_text_size = "60dp"
        custom:arc_progress="20"
        custom:arc_bottom_text="CPU"
        custom:arc_bottom_text_size="12dp"
        custom:arc_stroke_width = "10dp"
        android:layout_above="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <com.github.lzyzsd.circleprogress.ArcProgress
        android:id="@+id/arc_progress_BATTERY"
        android:background="#214193"
        android:layout_width="170dp"
        android:layout_height="170dp"
        custom:arc_suffix_text_padding = "5dp"
        custom:arc_suffix_text_size = "25dp"

        custom:arc_text_size = "60dp"
        custom:arc_progress="96"
        custom:arc_bottom_text="BATTERY"
        custom:arc_bottom_text_size="12dp"
        custom:arc_stroke_width = "10dp"
        android:layout_alignTop="@+id/arc_progress_CPU"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/ipAddress"
        android:layout_alignStart="@+id/arc_progress_CPU"
        android:layout_alignEnd="@+id/arc_progress_BATTERY"
        android:background="@drawable/top_text_bg"
        android:hint="@string/enter_ip_address_hint"
        android:layout_centerInParent="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/portNumber"
        android:background="@drawable/bottom_text_bg"
        android:layout_below="@+id/ipAddress"
        android:layout_alignStart="@+id/ipAddress"
        android:layout_alignEnd="@+id/ipAddress"
        android:layout_marginTop="5dp"
        android:hint="@string/enter_port_number_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/enter_surrogate_details_label"
        android:textColor="#e2e2e2"
        android:id="@+id/textView"
        android:layout_above="@+id/ipAddress"
        android:layout_alignStart="@+id/ipAddress"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="8dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="  ADD SURROGATE  "
        android:background="@drawable/rounded_button"
        android:id="@+id/button"
        android:onClick="TestConnection"
        android:textColor="#e2e2e2"
        android:layout_alignTop="@+id/button2"
        android:layout_alignStart="@+id/arc_progress_BATTERY" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/performance_and_energy_title"
        android:textColor="#e2e2e2"
        android:id="@+id/textView2"
        android:layout_marginLeft="8dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/response_from_surrogate_label"
        android:textColor="#e2e2e2"
        android:id="@+id/textView3"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true" />

    <com.github.lzyzsd.circleprogress.CircleProgress
        android:id="@+id/circle_progress"
        android:layout_marginLeft="10dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        custom:circle_progress="0"
        custom:circle_max="10"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        custom:circle_suffix_text=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/surrogate_index_label"
        android:textColor="#e2e2e2"
        android:id="@+id/textView4"
        android:layout_marginLeft="12dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/circle_progress"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="true"
        android:layout_alignWithParentIfMissing="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wifi_strength_label"
        android:textColor="#e2e2e2"
        android:id="@+id/textView5"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignTop="@+id/circle_progress"
        android:layout_toStartOf="@+id/button"
        android:layout_marginRight="-10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/surrogate_power_status_label"
        android:textColor="#e2e2e2"
        android:id="@+id/textView6"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@id/textView5"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/surrogate_load_label"
        android:textColor="#e2e2e2"
        android:id="@+id/textView7"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@id/textView5"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#e2e2e2"
        android:id="@+id/wifi_strength"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-2dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#e2e2e2"
        android:id="@+id/surrogate_power"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-2dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#e2e2e2"
        android:id="@+id/surrogate_load"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-2dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/available_ram_label"
        android:textColor="#e2e2e2"
        android:id="@+id/textView11"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#e2e2e2"
        android:id="@+id/available_ram"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/surrogate_load"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/test_connection_button_label"
        android:background="@drawable/rounded_button"
        android:id="@+id/button2"
        android:onClick="TestConnection"
        android:textColor="#e2e2e2"
        android:layout_below="@+id/portNumber"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp" />


</RelativeLayout>
